# akq_agents

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  start.sh
.joycode/memory/: MEMORY.md  feedback_desktop_only.md
config/: data.yaml  llm.yaml  scheduler.yaml  system.yaml  web.yaml
docs/: architecture.md  data_layer.md  llm_agents.md  next_steps.md  portfolio.md  real_akshare.md  scheduler.md  semi_live.md  web_console.md
docs/superpowers/plans/: 2026-06-23-architecture-cleanup.md  2026-06-23-llm-closed-loop-ux.md  2026-06-23-llm-factor-brainstorm.md
docs/superpowers/specs/: 2026-06-17-p1-data-layer-design.md  2026-06-17-p2-scheduling-daemon-design.md  2026-06-17-p3-portfolio-engine-design.md  2026-06-17-p4-llm-agent-design.md  2026-06-17-p5-web-console-design.md
scripts/: analyze_research.py  backfill_benchmark.py  backfill_factor_metrics_history.py  backfill_industry_map.py  backfill_paper_trading.py  backfill_portfolio_history.py  backfill_stock_names.py  backfill_universe_from_ohlcv.py  backup.sh  bench_lock.py  bench_proc.py  query_latest.py  run_once.py
src/akq_agents/: bootstrap.py  logging_setup.py  main.py
src/akq_agents/agents/: advisor_agent.py  analyst_agent.py  backtest_agent.py  base.py  chat_agent.py  data_agent.py  factor_agent.py  portfolio_agent.py  report_agent.py  research_agent.py  risk_agent.py  stock_analyst_agent.py
src/akq_agents/cli/: app.py
src/akq_agents/models/: config.py  data_config.py  domain.py  llm_config.py  scheduler_config.py  web_config.py
src/akq_agents/orchestrator/: daemon_state_file.py  job_runner.py  scheduler.py  signal_handler.py  state_store.py  step_recorder.py  workflow.py
src/akq_agents/services/: akshare_service.py  alerter.py  backtest_service.py  data_explorer.py  environment.py  factor_service.py  llm_service.py  notifier.py  report_exporter.py  stock_detail.py  storage.py
src/akq_agents/web/: app.py  deps.py  guard.py  (+1 more)
tests/data/: test_akshare_gateway.py  test_basics.py  test_calendar.py  test_factor_agent_integration.py  test_quality.py  test_repository.py  test_retry_worker.py  test_universe_filters.py
tests/factors/: test_code_sandbox.py  test_discovery_code.py  test_discovery_demote.py  test_dsl_space.py  test_eviction.py  test_factors.py  test_llm_brainstorm.py
tests/llm/: test_builtin_tools.py  test_llm.py
tests/orchestrator/: test_daemon_lifecycle.py  test_daemon_state_file.py  test_data_refresh_job.py  test_deep_research_step_partition.py  test_factor_brainstorm_job.py  test_factor_discovery_job.py  test_job_runner.py  test_jobs_post_close.py  test_signal_handler.py  test_state_store.py
tests/portfolio/: test_backtester_canary.py  test_combined_universe.py  test_composite_ewma_ir.py  test_composite_optimizer_attributor.py  test_compute_factor_history_vectorized.py  test_evaluator.py  test_lookahead_bias_canary.py  test_paper_trading.py  test_portfolio_agent.py  test_preprocessor.py  test_risk_filter.py  test_rolling_ic_incremental_equiv.py  test_snapshot_store.py  test_trade_list.py
tests/services/: test_alerter.py  test_stock_detail.py  test_stock_names.py
tests/web/: conftest.py  test_backfill_names.py  test_control_trigger.py  test_csrf_guard.py  test_health_dashboard.py  test_research_brainstorm.py  test_stock_api.py  test_web.py
(+81 files in other folders)
